@@ -1,4 +1,5 @@
 <!--// $Id$ //-->
+<H1><B>{$layout.pagetitle}</B></H1>
 {literal}
 <SCRIPT language=JavaScript>
 	<!--
@@ -35,8 +36,9 @@
 			<TABLE cellpadding="5" cellspacing="0" width="100%">
 				<TR class="dark">
 					<TD width="1%" class="fleftu" nowrap><IMG src="img/host.gif" ALT=""> <B>{t}Name:{/t}</B></TD>
-					<TD width="97%" class="fbt" nowrap>{t}Description:{/t}</TD>
+					<TD width="96%" class="fbt" nowrap>{t}Description:{/t}</TD>
 					<TD width="1%" class="fbt" align="right" nowrap>{t}Last Reload:{/t}</TD>
+					<TD width="1%" class="fbt" nowrap>{t}Status:{/t}</TD>
 					<TD width="1%" class="frightu"></TD>
 				</TR>
 				{cycle values="light,lucid" print=false}
@@ -45,6 +47,9 @@
 					<TD nowrap><IMG src="img/host.gif" ALT=""> <B>{$hosts[hosts].name}</B></TD>
 					<TD>{$hosts[hosts].description}</TD>
 					<TD align="right" nowrap>{if $hosts[hosts].lastreload}{$hosts[hosts].lastreload|date_format:"%Y/%m/%d %H:%M"}{else}-{/if}</TD>
+					<TD nowrap>{if $hosts[hosts].reload==1}{t}waiting{/t}
+						    {elseif $hosts[hosts].reload==0}{t}OK{/t}
+						    {else}{t}unknown{/t}{/if}</TD>
 					<TD>
 						{cycle print=false}
 						<INPUT class="box {cycle}" TYPE="checkbox" NAME="hosts[]" VALUE="{$hosts[hosts].id}"{if $hosts[hosts].reload} CHECKED{/if}>
@@ -64,7 +69,7 @@
 						<INPUT CLASS="box light" TYPE="checkbox" NAME="allbox" onClick="CheckAll();" VALUE="Check All Boxes">
 						<A HREF="javascript:CheckAll2();">{t}Check All{/t}</A>
 					</TD>
-					<TD CLASS="ftop" ALIGN="right" colspan="2" nowrap>
+					<TD CLASS="ftop" ALIGN="right" colspan="3" nowrap>
 						<A href="javascript:document.reload.submit();">{t}Submit{/t} <IMG src="img/save.gif" ALT=""></A>
 					</TD>
 				</TR>
